refactore econews-comments